crates/tests/acl/fixtures/snapshots/acl_tests__tests__uri-scheme-allow-list.snap
---
source: crates/tests/acl/src/lib.rs
expression: resolved
---
Resolved {
    has_app_acl: false,
    allowed_commands: {
        "plugin:ping|ping": [
            ResolvedCommand {
                context: Local,
                windows: [],
                webviews: [
                    Pattern {
                        original: "child1",
                        tokens: [
                            Char(
                                'c',
                            ),
                            Char(
                                'h',
                            ),
                            Char(
                                'i',
                            ),
                            Char(
                                'l',
                            ),
                            Char(
                                'd',
                            ),
                            Char(
                                '1',
                            ),
                        ],
                        is_recursive: false,
                    },
                ],
                scope_id: None,
            },
        ],
    },
    denied_commands: {},
    command_scope: {},
    global_scope: {},
    uri_scheme_access: [
        ResolvedUriSchemeAccess {
            windows: [],
            webviews: [
                Pattern {
                    original: "child1",
                    tokens: [
                        Char(
                            'c',
                        ),
                        Char(
                            'h',
                        ),
                        Char(
                            'i',
                        ),
                        Char(
                            'l',
                        ),
                        Char(
                            'd',
                        ),
                        Char(
                            '1',
                        ),
                    ],
                    is_recursive: false,
                },
            ],
            schemes: [
                "my-scheme",
                "my-other-scheme",
            ],
        },
    ],
}
